--- a/public/patterns/00-atoms-02-text/index.html
+++ b/public/patterns/00-atoms-02-text/index.html
@@ -12,8 +12,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         
-        <link rel="stylesheet" href="../../css/style.css?1446578774" media="all" />
-        <link rel="stylesheet" href="../../css/styleguide.css?1446578774" media="all" />
+        <link rel="stylesheet" href="../../css/style.css?1446579988" media="all" />
+        <link rel="stylesheet" href="../../css/styleguide.css?1446579988" media="all" />
 
         <!-- Custom Fonts -->
         <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/8b09d344-baa0-42a8-bbac-175ff46c86d5.css"/>
@@ -41,8 +41,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446578774" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446578774" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446579988" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446579988" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -440,6 +440,96 @@ p q r s t u v w x y z { | } ~
 							</div>
 						</div>
 					</div>
+					<div id="atoms-links" class="sg-pattern">
+						<h2 class="content-header" ><a href="../../patterns/00-atoms-02-text-links/00-atoms-02-text-links.html" class="patternLink" data-patternpartial="atoms-links">Links</a></h2>
+						<div class="sg-pattern-body">
+							<p>
+<a href="#">Link Text</a>
+</p>
+
+<p>
+<a class="arrow-link" href="#">Arrow Link</a>
+</p>
+
+<p>
+<a class="dashed-link" href="#">Dashed Link</a>
+</p>
+
+<p>
+<a class="read-more-link" href="#">Read More Link</a>
+</p>
+
+<p>
+<a class="view-all-link" href="#">View All Link</a>
+</p>
+
+<p>
+<a class="file-link" href="#.pdf">File Link to PDF</a>
+</p>
+
+<p>
+<a class="file-link" href="#.xls">File Link to XLS/XLSX</a>
+</p>
+
+<p>
+<a class="file-link" href="#.doc">File Link to DOC/DOCX</a>
+</p>
+
+<p>
+<a class="file-link" href="#.xls">File Link to PPT/PPTX</a>
+</p>
+
+<p>
+<a class="btn" href="#">BTN</a>
+</p>
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;p&gt;
+&lt;a href=&quot;#&quot;&gt;Link Text&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;arrow-link&quot; href=&quot;#&quot;&gt;Arrow Link&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;dashed-link&quot; href=&quot;#&quot;&gt;Dashed Link&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;read-more-link&quot; href=&quot;#&quot;&gt;Read More Link&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;view-all-link&quot; href=&quot;#&quot;&gt;View All Link&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;file-link&quot; href=&quot;#.pdf&quot;&gt;File Link to PDF&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;file-link&quot; href=&quot;#.xls&quot;&gt;File Link to XLS/XLSX&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;file-link&quot; href=&quot;#.doc&quot;&gt;File Link to DOC/DOCX&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;file-link&quot; href=&quot;#.xls&quot;&gt;File Link to PPT/PPTX&lt;/a&gt;
+&lt;/p&gt;
+
+&lt;p&gt;
+&lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;BTN&lt;/a&gt;
+&lt;/p&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 			</div> <!--end #sg-patterns-->
 	
 		</div><!--end .sg-main-->
@@ -485,10 +575,10 @@ p q r s t u v w x y z { | } ~
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1446578774">
+	<script id="pl-js-polyfill-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -497,10 +587,10 @@ p q r s t u v w x y z { | } ~
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1446578774">
+	<script id="pl-js-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
