--- a/public/patterns/00-atoms-06-buttons/index.html
+++ b/public/patterns/00-atoms-06-buttons/index.html
@@ -12,8 +12,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         
-        <link rel="stylesheet" href="../../css/style.css?1446578774" media="all" />
-        <link rel="stylesheet" href="../../css/styleguide.css?1446578774" media="all" />
+        <link rel="stylesheet" href="../../css/style.css?1446579988" media="all" />
+        <link rel="stylesheet" href="../../css/styleguide.css?1446579988" media="all" />
 
         <!-- Custom Fonts -->
         <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/8b09d344-baa0-42a8-bbac-175ff46c86d5.css"/>
@@ -41,8 +41,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446578774" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446578774" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446579988" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446579988" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -210,8 +210,8 @@
 							</div>
 						</div>
 					</div>
-					<div id="atoms-hero-botton" class="sg-pattern">
-						<h2 class="content-header" ><a href="../../patterns/00-atoms-06-buttons-05-hero-botton/00-atoms-06-buttons-05-hero-botton.html" class="patternLink" data-patternpartial="atoms-hero-botton">Hero Botton</a></h2>
+					<div id="atoms-hero-button" class="sg-pattern">
+						<h2 class="content-header" ><a href="../../patterns/00-atoms-06-buttons-05-hero-button/00-atoms-06-buttons-05-hero-button.html" class="patternLink" data-patternpartial="atoms-hero-button">Hero Button</a></h2>
 						<div class="sg-pattern-body">
 								<a class="hero-button">Hero Button</a>
 
@@ -319,10 +319,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1446578774">
+	<script id="pl-js-polyfill-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -331,10 +331,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1446578774">
+	<script id="pl-js-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
