--- a/public/patterns/02-organisms-00-global/index.html
+++ b/public/patterns/02-organisms-00-global/index.html
@@ -12,8 +12,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         
-        <link rel="stylesheet" href="../../css/style.css?1446578774" media="all" />
-        <link rel="stylesheet" href="../../css/styleguide.css?1446578774" media="all" />
+        <link rel="stylesheet" href="../../css/style.css?1446579988" media="all" />
+        <link rel="stylesheet" href="../../css/styleguide.css?1446579988" media="all" />
 
         <!-- Custom Fonts -->
         <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/8b09d344-baa0-42a8-bbac-175ff46c86d5.css"/>
@@ -41,8 +41,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446578774" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446578774" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1446579988" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1446579988" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -231,32 +231,26 @@
 
                 <div class="col-md-3">
                     <div class="footer-nav">
+                        <h2 class="footer-nav--heading">Lorizzle pimpin' dolizzle sit amet I</h2>
+                        <ul><li><a href="{{url}}">Provide Feedback</a></li><li><a href="{{url}}">Staff Directory</a></li></ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-nav">
+                        <h2 class="footer-nav--heading">The swallow may fly south with the sun</h2>
+                        <ul><li><a href="{{url}}">Annual Reports</a></li><li><a href="{{url}}">Hot Team Reports</a></li><li><a href="{{url}}">TechQual+ Survey</a></li></ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-nav">
+                        <h2 class="footer-nav--heading">All right. Well, take care of yourself, Han</h2>
+                        <ul><li><a href="{{url}}">Project Management Office</a></li><li><a href="{{url}}">Project Status</a></li><li><a href="{{url}}">Request a Project</a></li></ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-nav">
                         <h2 class="footer-nav--heading">Carrot cake fruitcake dessert apple</h2>
                         <ul><li><a href="{{url}}">Knowledge Base</a></li><li><a href="{{url}}">Submit a Ticket</a></li><li><a href="{{url}}">Training &amp; Development</a></li></ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-nav">
-                        <h2 class="footer-nav--heading">Now that we know who you are, I know</h2>
-                        <ul><li><a href="{{url}}">Knowledge Base</a></li><li><a href="{{url}}">Submit a Ticket</a></li><li><a href="{{url}}">Training &amp; Development</a></li></ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-nav">
-                        <h2 class="footer-nav--heading">Cauliflower cheese cream cheese baby</h2>
-                        <ul><li><a href="{{url}}">Archives</a></li></ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-nav">
-                        <h2 class="footer-nav--heading">Bacon ipsum dolor sit amet spare rib</h2>
-                        <ul><li><a href="{{url}}">Upcoming Events</a></li><li><a href="{{url}}">Workshops</a></li></ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-nav">
-                        <h2 class="footer-nav--heading">Hong Kong Phooey, number one super g</h2>
-                        <ul><li><a href="{{url}}">Annual Reports</a></li><li><a href="{{url}}">Hot Team Reports</a></li><li><a href="{{url}}">TechQual+ Survey</a></li></ul>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -267,14 +261,20 @@
                 </div>
                 <div class="col-md-3">
                     <div class="footer-nav">
+                        <h2 class="footer-nav--heading">Nesciunt sunt cillum keytar Pitchfork</h2>
+                        <ul><li><a href="{{url}}">Services A-Z</a></li><li><a href="{{url}}">Services By Category</a></li></ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-nav">
                         <h2 class="footer-nav--heading">Blog meme masthead DocumentCloud Fou</h2>
                         <ul><li><a href="{{url}}">Project Management Office</a></li><li><a href="{{url}}">Project Status</a></li><li><a href="{{url}}">Request a Project</a></li></ul>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="footer-nav">
-                        <h2 class="footer-nav--heading">All right. Well, take care of yourself, Han</h2>
-                        <ul><li><a href="{{url}}">Project Management Office</a></li><li><a href="{{url}}">Project Status</a></li><li><a href="{{url}}">Request a Project</a></li></ul>
+                        <h2 class="footer-nav--heading">Now that we know who you are, I know</h2>
+                        <ul><li><a href="{{url}}">Knowledge Base</a></li><li><a href="{{url}}">Submit a Ticket</a></li><li><a href="{{url}}">Training &amp; Development</a></li></ul>
                     </div>
                 </div>
         </div>
@@ -295,32 +295,26 @@
 
                 &lt;div class=&quot;col-md-3&quot;&gt;
                     &lt;div class=&quot;footer-nav&quot;&gt;
+                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Lorizzle pimpin' dolizzle sit amet I&lt;/h2&gt;
+                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Provide Feedback&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Staff Directory&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;col-md-3&quot;&gt;
+                    &lt;div class=&quot;footer-nav&quot;&gt;
+                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;The swallow may fly south with the sun&lt;/h2&gt;
+                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Annual Reports&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Hot Team Reports&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;TechQual+ Survey&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;col-md-3&quot;&gt;
+                    &lt;div class=&quot;footer-nav&quot;&gt;
+                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;All right. Well, take care of yourself, Han&lt;/h2&gt;
+                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Management Office&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Status&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Request a Project&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;col-md-3&quot;&gt;
+                    &lt;div class=&quot;footer-nav&quot;&gt;
                         &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Carrot cake fruitcake dessert apple&lt;/h2&gt;
                         &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Knowledge Base&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Submit a Ticket&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Training &amp;amp; Development&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
-                    &lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-md-3&quot;&gt;
-                    &lt;div class=&quot;footer-nav&quot;&gt;
-                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Now that we know who you are, I know&lt;/h2&gt;
-                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Knowledge Base&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Submit a Ticket&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Training &amp;amp; Development&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
-                    &lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-md-3&quot;&gt;
-                    &lt;div class=&quot;footer-nav&quot;&gt;
-                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Cauliflower cheese cream cheese baby&lt;/h2&gt;
-                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Archives&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
-                    &lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-md-3&quot;&gt;
-                    &lt;div class=&quot;footer-nav&quot;&gt;
-                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Bacon ipsum dolor sit amet spare rib&lt;/h2&gt;
-                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Upcoming Events&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Workshops&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
-                    &lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;col-md-3&quot;&gt;
-                    &lt;div class=&quot;footer-nav&quot;&gt;
-                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Hong Kong Phooey, number one super g&lt;/h2&gt;
-                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Annual Reports&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Hot Team Reports&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;TechQual+ Survey&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
                     &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;col-md-3&quot;&gt;
@@ -331,14 +325,20 @@
                 &lt;/div&gt;
                 &lt;div class=&quot;col-md-3&quot;&gt;
                     &lt;div class=&quot;footer-nav&quot;&gt;
+                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Nesciunt sunt cillum keytar Pitchfork&lt;/h2&gt;
+                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Services A-Z&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Services By Category&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;col-md-3&quot;&gt;
+                    &lt;div class=&quot;footer-nav&quot;&gt;
                         &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Blog meme masthead DocumentCloud Fou&lt;/h2&gt;
                         &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Management Office&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Status&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Request a Project&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
                     &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;col-md-3&quot;&gt;
                     &lt;div class=&quot;footer-nav&quot;&gt;
-                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;All right. Well, take care of yourself, Han&lt;/h2&gt;
-                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Management Office&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Project Status&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Request a Project&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
+                        &lt;h2 class=&quot;footer-nav--heading&quot;&gt;Now that we know who you are, I know&lt;/h2&gt;
+                        &lt;ul&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Knowledge Base&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Submit a Ticket&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;{{url}}&quot;&gt;Training &amp;amp; Development&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;
                     &lt;/div&gt;
                 &lt;/div&gt;
         &lt;/div&gt;
@@ -395,10 +395,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1446578774">
+	<script id="pl-js-polyfill-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -407,10 +407,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1446578774">
+	<script id="pl-js-insert-1446579988">
 		(function() {
 			if (self != top) {
-				var cb = '1446578774';
+				var cb = '1446579988';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
